eks-terraform-platform/kubernetes-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: practice
  labels:
    name: practice
