eks-terraform-platform/kubernetes-manifests/02-deployment-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: practice
  labels:
    app: echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: ealen/echo-server:latest
        command: ["/bin/sh"]
        args: ["-c", "echo 'Echo Server Running' && sleep infinity"]
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 50m
            memory: 64Mi
          requests:
            cpu: 25m
            memory: 32Mi
