eks-terraform-platform/kubernetes-manifests/04-daemonset-collector.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: log-collector
  namespace: practice
spec:
  selector:
    matchLabels:
      app: log-collector
  template:
    metadata:
      labels:
        app: log-collector
    spec:
      containers:
      - name: collector
        image: busybox:latest
        command: ["/bin/sh"]
        args: ["-c", "while true; do echo 'Collecting logs from '$(hostname); sleep 120; done"]
        resources:
          limits:
            cpu: 50m
            memory: 32Mi
          requests:
            cpu: 25m
            memory: 16Mi
