eks-terraform-platform/kubernetes-manifests/06-pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: practice
spec:
  containers:
  - name: test
    image: alpine:latest
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo 'Test Pod - Checking connectivity'; sleep 45; done"]
    resources:
      limits:
        cpu: 50m
        memory: 32Mi
      requests:
        cpu: 25m
        memory: 16Mi
  restartPolicy: Always
