eks-terraform-platform/kubernetes-manifests/12-service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: practice
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
