eks-terraform-platform/kubernetes-manifests/13-service-echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: practice
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
