eks-terraform-platform/kubernetes-manifests/14-service-mysql-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: practice
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
