eks-terraform-platform/kubernetes-manifests/26-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-lb
  namespace: practice
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
