eks-terraform-platform/kubernetes-manifests/24-networkpolicy-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: practice
spec:
  podSelector: {}
  policyTypes:
  - Ingress
